--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             workshops at various colleges, spoke at various tech conferences. He also
             conducts public traning classes in Bangalore on a semi-regular basis.</p>
           <p>
-            <b>Anand is co-author and current maintainer of web.py, a web framework in
+            <b>Anand is co-author and current maintainer of <a href="http://webpy.org">web.py</a>, a web framework in
         Python.</b> 
           </p>
           <p class="speaker-contact">
