--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
      
         <div class="well well-large">
-        <h2>Pre-Video about workshop</h2>
+        <h2>About the workshop</h2>
         <div class="flex-video widescreen">
           <iframe src="http://www.youtube.com/embed/tekO06LpvZE" frameborder="0" allowfullscreen=""></iframe>
            </div>
@@ -70,7 +70,7 @@
         <h2>Prerequisites</h2>
         <p>This course assumes that the participants have prior programming experience in Python.
 
-          <p>Being able to solve most of the execises from Working with Data chapter of Python Practice Book will be a sufficient prerequisite.</p>
+          <p>Being able to solve most of the exercises from <a href="http://anandology.com/python-practice-book/working-with-data.html">Working with Data</a> chapter of <a href="http://anandology.com/python-practice-book/">Python Practice Book</a> will be a sufficient prerequisite.</p>
 
           <p>All participants are expected to have a laptop with Python 2.7 installed. The participants are expected to try examples and solve exercises in the class.</p>
       </div>
@@ -95,7 +95,7 @@
                     </li>
                     <li>Iterators and Generators
                       <ul>  
-                        <li>Introduction to Iterators, generators and generator expressions with emphesis on working with large data and how these techiques help code more readable.</li>
+                        <li>Introduction to Iterators, generators and generator expressions with emphasis on working with large data and how these techniques help to make code more readable.</li>
                       </ul>
                     </li>
                     <li>Functional Programming
@@ -105,7 +105,7 @@
                     </li>
                     <li>Deeper look at classes and objects
                       <ul>
-                        <li>Understaing classes and objects at a deeper level. Covers old-style and new-style classes, static methods, class methods, special methods for operator overloading, meta classes, slots, descriptors etc.</li>
+                       <li>Understanding classes and objects at a deeper level. Covers old-style and new-style classes, static methods, class methods, special methods for operator overloading, meta classes, slots, descriptors, etc.</li>
                       </ul>
                     </li>
                     <li> Writing Python Libraries
@@ -135,11 +135,10 @@
             to scaling high-traffic websites, writing high-performance scientific tools
             to modern proxy servers.</p>
           <p>He has offered Python training to various corporates, conducted Python
-            workshops at various colleges, spoke at various tech conferences. He also
-            conducts public traning classes in Bangalore on a semi-regular basis.</p>
+            workshops at various colleges and spoke at various tech conferences. He also
++            conducts public training classes in Bangalore on a semi-regular basis.</p>
           <p>
-            <b>Anand is co-author and current maintainer of <a href="http://webpy.org">web.py</a>, a web framework in
-        Python.</b> 
+            <b>Anand is co-author and current maintainer of <a href="http://webpy.org">web.py</a>, a web framework in Python.</b> 
           </p>
           <p class="speaker-contact">
             <a href="https://twitter.com/anandology">Twitter &clubs;</a>
@@ -153,7 +152,7 @@
 <div class="row">
   <div class="span12" style="padding:20px">
 
-    <a href='http://pythonworkshop.doattend.com/' class='register btn btn-large btn-sample'>Reserve your seat Today!</a>
+    <a href='http://pythonworkshop.doattend.com/' class='hurry register btn btn-large btn-sample'>Reserve your seat Today!</a>
   
   </div>
 </div>
