--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         of individuals every month with jobs around upcoming technologies. HasGeek
         also builds tools to assist communities with organizing events and meetups.</p>
       <p>For more information, write to
-        <a  class="contact" href="mailto:info@hasgeek.com">info@hasgeek.com</a> and please contact on <span class="contact">080-67684422</span></p>
+        <a  class="contact" href="mailto:info@hasgeek.com">info@hasgeek.com</a> and please contact on <span class="contact-number">080-67684422</span></p>
 
 <div class="row">
   <div class="span2"><a href="https://twitter.com/hasgeek" class="twitter-follow-button" data-show-count="false">Follow @hasgeek</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
@@ -192,18 +192,12 @@
 <div class="bottom">
   <div class="container">
     <div class="row">
-  <div class="span6">
+  <div class="span12">
 <div class="copyright"><p>
-        Copyright © 2010-13 HasGeek-All rights reserved.
+        Copyright © 2010-13.
       </p>
 </div>
   </div>
-<div class="span6">
-<div class="credits">
-  <p>Site designed by Jamna Vyas</p>
-</div>
-</div>
-
 </div>
 </div>
 <div>
