--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
 
+
         <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
         <![endif]-->
@@ -28,7 +29,7 @@
 
  <div class="container">
    <div class="container ">
-    <img src="img/hasgeek-presents.png" alt="Hasgeek logo" class="presented-by">
+<!--     <img src="img/hasgeek-presents.png" alt="Hasgeek logo" class="presented-by"> -->
 
 
 </div>
@@ -160,11 +161,11 @@
 </div>
   <footer>
     <div class="container">
-    <div class="media muted">
+    <div class="media">
     <a class="pull-left" href="http://hasgeek.com/">
     <img class="media-object" src="img/hg-logo.png" width="75" alt="HasGeek">
   </a>
-    <div class="media-body mute">
+    <div class="media-body">
       <h4 class="media-heading">HasGeek creates discussion spaces around emerging technologies to foster
         the growth of communities.</h4>
       <p>Since 2010, HasGeek has organized a number of conferences, hacknights
@@ -181,10 +182,7 @@
       data-width="150" data-show-faces="true" data-font="arial"></div></div>
 
 </div>
-        
 
-      
- 
     </div>
   </div>
 
@@ -193,8 +191,9 @@
   <div class="container">
     <div class="row">
   <div class="span12">
-<div class="copyright"><p>
-        Copyright © 2010-13.
+<div class="copyright">
+<p>
+  Copyright © 2010-13 HasGeek-All rights reserved
       </p>
 </div>
   </div>
