changes in footer

--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
     <img class="media-object" src="img/hg-logo.png" width="75" alt="HasGeek">
   </a>
     <div class="media-body">
-      <h4 class="media-heading">HasGeek creates discussion spaces around emerging technologies to foster
-        the growth of communities.</h4>
-      <p>Since 2010, HasGeek has organized a number of conferences, hacknights
+        <p>
+        HasGeek creates discussion spaces around emerging technologies to foster
+        the growth of communities.
+        Since 2010, HasGeek has organized a number of conferences, hacknights
         and geekups around open source, web design and development, big data, cloud
         computing and mobile opportunities. The HasGeek Job Board connects thousands
         of individuals every month with jobs around upcoming technologies. HasGeek
